@@ -765,7 +765,7 @@
     }
    ],
    "source": [
-    "a = vcsn.context('lal(abc), b').random(4)\n",
+    "a = vcsn.context('lal(abc), b').random_automaton(4)\n",
     "b = a.lift()\n",
     "b"
    ]
