@@ -117,7 +117,7 @@ dist_notebooks_DATA =                           \
   %D%/context.ladybird.ipynb                    \
   %D%/context.levenshtein.ipynb                 \
   %D%/context.quotkbaseb.ipynb                  \
-  %D%/context.random.ipynb                      \
+  %D%/context.random_automaton.ipynb            \
   %D%/context.random_expression.ipynb           \
   %D%/context.trie.ipynb                        \
   %D%/expansion.operators.ipynb                 \
